--- a/PartyInvites/Views/Home/RsvpForm.cshtml
+++ b/PartyInvites/Views/Home/RsvpForm.cshtml
@@ -9,7 +9,8 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>RsvpForm</title>
+    <link rel="stylesheet" type="text/css" href="~/Content/Css/Style.css" />
+    <title>RsvpForm</title> 
 </head>
 <body>
     <div> 
