--- a/PartyInvites/Views/Home/RsvpForm.cshtml
+++ b/PartyInvites/Views/Home/RsvpForm.cshtml
@@ -15,6 +15,7 @@
 <body>
     <div>
         @using (Html.BeginForm("RsvpForm","Home",FormMethod.Post)) {
+            @Html.ValidationSummary()
             <p>Your name: @Html.TextBoxFor(x =>x.Name) </p>
             <p>Your email: @Html.TextBoxFor(x => x.Email)</p>
             <p>Your phone: @Html.TextBoxFor(x => x.Phone)</p>
